---------------------------------
MUI NList MCC classes - ChangeLog
---------------------------------

$Id$
$Source$

2005-04-09  Jens Langner <Jens.Langner@light-speed.de>

    * all: fixed case sensitive #include statements which broke the
      build on systems with a case sensistive filesystem.
    * includes/SDI*: updated the common SDI headers with latest
      version taken from the YAM repository.

2005-03-21  Gunther Nikl <gni@gecko.de>

    * all: Minor source cleanup.

2005-03-17  Sebastian Bauer <mail@sebastianbauer.info>

    * NListtree_mcc: Addressed bug 1095158 by rewritting the
      responsible parts. This might introduce other problems and
      needs proper testings.

2005-03-16  Sebastian Bauer <mail@sebastianbauer.info>

    * NList_mcc: Fixed base page access which happened when no entry
      was selected and the keyboard was used (bug 1156362)

2005-01-01  Nicolas Sallin <henes@biclodon.com>

    * NList_mcc: Fixed wrong usage of MUI_MAXMAX

2004-12-15  Jens Langner <Jens.Langner@light-speed.de>

    * made sure all revisions/dates are bumped of all NList classes
      for upcoming new NList release.

2004-12-15  Sebastian Bauer <mail@sebastianbauer.info>

    * NList_mcc: On some circumstances MUIA_NList_InsertPositions was not
      set correctly if the element has been inserted via 
      MUIV_NList_Insert_Sorted. Hopfully fixed now.

2004-12-14  Sebastian Bauer <mail@sebastianbauer.info>

    * NList_mcc: Fixed insert refresh problem

2004-12-13  Sebastian Bauer <mail@sebastianbauer.info>

    * NList_mcc:  Fixed offset refresh bug
    * NList_mcc, NListviews_mcp: Added new prefs option to disable
      the vertical centering of the text lines (can be found on the
      misc2 sub page)
    * NListviews_mcp: Eliminated a misc sub page. In the future the
      rest should be eliminated as well.

2004-10-24  Jens Langner <Jens.Langner@light-speed.de>

    * include/mccclass_68k.S: updated mcc 68k->PPC cross call stubs to