@@ -1,0 +1,10 @@
+#ifndef MCCCLASS_PROTOS_H
+#define MCCCLASS_PROTOS_H
+
+#ifndef EXEC_TYPES_H
+#include <exec/types.h>
+#endif
+
+ULONG MCC_Query(LONG which);
+
+#endif
