@@ -1,0 +1,27 @@
+#ifndef INLINE4_MCCCLASS_H
+#define INLINE4_MCCCLASS_H
+
+/*
+** This file was auto generated by idltool 50.10.
+**
+** It provides compatibility to OS3 style library
+** calls by substituting functions.
+**
+** Do not edit manually.
+*/ 
+
+#ifndef EXEC_TYPES_H
+#include <exec/types.h>
+#endif
+#ifndef EXEC_EXEC_H
+#include <exec/exec.h>
+#endif
+#ifndef EXEC_INTERFACES_H
+#include <exec/interfaces.h>
+#endif
+
+
+/* Inline macros for Interface "main" */
+#define MCC_Query(which) IMCCClass->MCC_Query(which) 
+
+#endif /* INLINE4_MCCCLASS_H */
