@@ -5,6 +5,11 @@ MUI NList MCC classes - ChangeLog
 $Id$
 $Source$
 
+2005-04-10  Jens Langner <Jens.Langner@light-speed.de>
+
+    * includes/mccclass_68k: replaced the assembler based OS4/68k stub by a
+      easier manageable C-based variant.
+
 2005-04-09  Jens Langner <Jens.Langner@light-speed.de>
 
     * all: fixed case sensitive #include statements which broke the
